# ai_knowledgebase_poc

./: .gitignore  README.md  pyproject.toml
.agents/skills/: superpowers
app/: CONTEXT.md
app/api/: CONTEXT.md  query_api.py
app/commands/: CONTEXT.md  chunk_document_command.py  generate_answer_command.py  index_chunks_command.py  run_ingestion_indexing_command.py
app/core/: CONTEXT.md  config.py  huggingface_client.py  index_store.py  text_embedder.py  vector_store.py
app/data/documents/: .~lock.Simulation The Initial Proposal Document from project manager side.docx#
app/ingestion/: CONTEXT.md  automation.py  connectors.py  indexing_pipeline.py
app/models/: CONTEXT.md  ingestion_models.py  response_models.py
app/rag/: CONTEXT.md  retriever.py
app/services/: CONTEXT.md  query_service.py
docs/plans/: 2026-03-18-local-qdrant-vector-db-plan.md
tests/: test_config.py  test_generate_answer_command_llm.py  test_huggingface_client.py  test_ingestion_indexing_pipeline.py  test_ingestion_to_retrieval_integration.py  test_query_pipeline.py  test_static_data_connectors.py  test_vector_store_qdrant.py
